// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CounterfactualUnsupported status renders inputs and outputs status 1`] = `
<Bullseye
  className="cf-unsupported"
>
  <EmptyState
    variant="full"
  >
    <EmptyStateIcon
      color="var(--pf-global--info-color--100)"
      icon={[Function]}
    />
    <Title
      headingLevel="h1"
      size="4xl"
    >
      Unsupported model
    </Title>
    <EmptyStateBody>
      <p>
        The model contains elements that are unsupported.
      </p>
      <div>
        <List>
          <ListItem
            data-ouia-component-id="inputs-message"
          >
            All of the model inputs are structured data-types.
          </ListItem>
          <ListItem
            data-ouia-component-id="outputs-message"
          >
            All of the model outcomes are structured data-types.
          </ListItem>
        </List>
      </div>
      <p>
        Consequentially Counterfactuals cannot be generated.
      </p>
    </EmptyStateBody>
  </EmptyState>
</Bullseye>
`;

exports[`CounterfactualUnsupported status renders inputs status 1`] = `
<Bullseye
  className="cf-unsupported"
>
  <EmptyState
    variant="full"
  >
    <EmptyStateIcon
      color="var(--pf-global--info-color--100)"
      icon={[Function]}
    />
    <Title
      headingLevel="h1"
      size="4xl"
    >
      Unsupported model
    </Title>
    <EmptyStateBody>
      <p>
        The model contains elements that are unsupported.
      </p>
      <div>
        <List>
          <ListItem
            data-ouia-component-id="inputs-message"
          >
            All of the model inputs are structured data-types.
          </ListItem>
        </List>
      </div>
      <p>
        Consequentially Counterfactuals cannot be generated.
      </p>
    </EmptyStateBody>
  </EmptyState>
</Bullseye>
`;

exports[`CounterfactualUnsupported status renders outputs status 1`] = `
<Bullseye
  className="cf-unsupported"
>
  <EmptyState
    variant="full"
  >
    <EmptyStateIcon
      color="var(--pf-global--info-color--100)"
      icon={[Function]}
    />
    <Title
      headingLevel="h1"
      size="4xl"
    >
      Unsupported model
    </Title>
    <EmptyStateBody>
      <p>
        The model contains elements that are unsupported.
      </p>
      <div>
        <List>
          <ListItem
            data-ouia-component-id="outputs-message"
          >
            All of the model outcomes are structured data-types.
          </ListItem>
        </List>
      </div>
      <p>
        Consequentially Counterfactuals cannot be generated.
      </p>
    </EmptyStateBody>
  </EmptyState>
</Bullseye>
`;
